--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "@stomp/stompjs": "^6.1.2",
     "rxjs": "~6.6.0",
+    "sockjs": "^0.3.21",
+    "stompjs": "^2.3.3",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
