--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rxjs": "~6.6.0",
     "sockjs": "^0.3.21",
     "stompjs": "^2.3.3",
+    "sweetalert2": "^11.1.8",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
