--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
     "@stomp/stompjs": "^6.1.2",
+    "braintree-web": "^3.82.0",
     "ngx-material-rating": "^2.0.0",
     "ngx-range": "^1.1.0",
     "rxjs": "~6.6.0",
     "sockjs": "^0.3.21",
     "stompjs": "^2.3.3",
     "sweetalert2": "^11.1.8",
+    "third-party-cookie-check": "^2.0.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
